--- a/wp-content/themes/anomeo/assets/scss/_base.scss
+++ b/wp-content/themes/anomeo/assets/scss/_base.scss
@@ -4,7 +4,7 @@
 // css vars
 :root {
     --ak-main-spacing: 30px;
-    --ak-accent-color: #000;
+    --ak-accent-color: #15818b;
     --ak-header-height: 70px;
 
     @include media-breakpoint-up(lg) {
