--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import "vars";
 @import "libs";
 @import "base";
+@import "information";
 
 .site-top-banner {
     position: fixed;
@@ -4341,12 +4342,24 @@
         font-family: "Din Pro";
         font-size: 20px;
 
-        max-width: 35%;
+        max-width: 60%;
+
+        margin-bottom: 100px;
 
         @include media-breakpoint-up(xl) {
             padding: 60px var(--ak-main-spacing);
 
             font-size: 35px;
+        }
+        .error-title{
+            font-family: "Din Pro Bold";
+        }
+        .error-content{
+            font-size: 15px;
+            font-family: "Din Pro Light";
+        }
+        @include media-breakpoint-down(md) {
+            max-width: 100%;
         }
     }
 }
@@ -5396,18 +5409,32 @@
     justify-content: space-between;
     color: #15818b;
     text-transform: uppercase;
+    border-top: 1px solid #707273;
+
+    @include media-breakpoint-down(md) {
+        display: block;
+    }
 
     .footer-title{
         font-size: 15px;
         font-family: "Din Pro Bold";
+        @include media-breakpoint-down(md) {
+            margin-top: 20px;
+        }
     }
 
     .newsletter{
         width: 40%;
+        @include media-breakpoint-down(md) {
+            width: 100%;
+        }
 
         .newsletter_text{
             width: 42%;
             font-size: 30px;
+            @include media-breakpoint-down(md) {
+                width: 100%;
+            }
         }
 
         .open__newsletter{
@@ -5442,6 +5469,9 @@
             justify-content: space-between;
             width: 55%;
             margin-bottom: 20px;
+            @include media-breakpoint-down(md) {
+                width: 23%;
+            }
         }
 
         .language{
