--- a/wp-content/themes/anomeo/assets/scss/_base.scss
+++ b/wp-content/themes/anomeo/assets/scss/_base.scss
@@ -76,7 +76,7 @@ p {
 }
 
 a {
-    color: #15818b;
+    color: #138997;
     text-decoration: none;
     outline: none !important;
     text-decoration: none;
@@ -379,31 +379,20 @@ label {
 .ak-page__sub-menu-row {
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     align-content: center;
-    justify-content: center;
+    justify-content: flex-end;
 
-    width: 100%;
-    height: var(--ak-header-height);
-    padding: 0 var(--ak-main-spacing);
-    border-top: 1px solid #b2b2b2;
-
-    text-transform: uppercase;
+    width: 16%;
+    padding-left: var(--ak-main-spacing);
     line-height: 1;
 
     .menu,
     .woocommerce-MyAccount-navigation > ul {
-        display: flex;
+        display: inline-block;
         align-content: center;
         align-items: center;
-
-        li:not(:first-of-type) {
-            margin-left: 35px;
-
-            @include media-breakpoint-up(xl) {
-                margin-left: 70px;
-            }
-        }
+        text-align: end;
 
         .menu-item,
         .menu-item a,
@@ -416,13 +405,13 @@ label {
             line-height: 1;
 
             @include media-breakpoint-up(xl) {
-                font-size: 25px;
+                font-size: 20px;
             }
 
             &.current-menu-parent,
             &.current-menu-item,
             &.is-active {
-                text-decoration: underline;
+                font-family: "Din Pro Bold";
             }
         }
     }
