--- a/wp-content/themes/anomeo/assets/scss/_account.scss
+++ b/wp-content/themes/anomeo/assets/scss/_account.scss
@@ -1,3 +1,56 @@
+
+.ak-page__sub-menu-row {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    align-content: center;
+    justify-content: flex-end;
+
+    width: 16%;
+    padding-left: var(--ak-main-spacing);
+    line-height: 1;
+
+    @include media-breakpoint-down(sm) {
+        width: 100%;
+        justify-content: flex-start;
+        padding-left: 0;
+
+        .woocommerce-MyAccount-navigation-link{
+            text-align: left;
+        }
+    }
+
+    .menu,
+    .woocommerce-MyAccount-navigation > ul {
+        display: inline-block;
+        align-content: center;
+        align-items: center;
+        text-align: end;
+
+        .menu-item,
+        .menu-item a,
+        .woocommerce-MyAccount-navigation-link,
+        .woocommerce-MyAccount-navigation-link a {
+            cursor: pointer;
+
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 1;
+
+            @include media-breakpoint-down(sm) {
+               font-size: 20px;
+            }
+
+            &.current-menu-parent,
+            &.current-menu-item,
+            &.is-active {
+                font-family: "Din Pro Bold";
+            }
+        }
+    }
+}
+
+
 .woocommerce-MyAccount-navigation{
     padding: 43px 0px;
     .woocommerce-MyAccount-navigation-link{
@@ -11,30 +64,54 @@
 
 .woocommerce{
     display: flex;
+    @include media-breakpoint-down(sm) {
+        display: flex;
+        flex-direction: column-reverse;    
+    }
 }
 
 .page__content-section {
     min-height: max-content;
 
     .r-wrap{
+        @include media-breakpoint-down(sm) {
+           padding: 0;
+
+            .ak-page__sub-menu-row{
+                padding: 0 var(--ak-main-spacing);
+                border-bottom: 1px solid #EAEAEA;
+            }
+        }
         border-top: 1px solid #EAEAEA;
     }
 
     .my-account-page__content-section{
         border-right: 1px solid #EAEAEA;
         width: 84%;
-        padding-top: 43px;
+
+        @include media-breakpoint-down(sm) {
+            padding: var(--ak-main-spacing);
+            width: 100%;
+            border-right: none;
+
+        }
 
         .account-title{
             color: #128796;
             opacity: 0.56;
             font-size: 20px;
             font-family: "Din Pro Bold";
+            @include media-breakpoint-down(sm) {
+                font-size: 16px;
+            }
         }
         .dashboard-title, .address-title{
             color: #128796;
             font-size: 36px;
             font-family: "Din Pro Bold";
+            @include media-breakpoint-down(sm) {
+                font-size: 28px;
+            }
         }
 
     }
@@ -42,20 +119,50 @@
     .myaccount__content-wrap--dashboard{
         width: 70%;
         color: #128796;
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+        }
 
         
         .dashboard-text{
             font-size: 16px;
             font-family: "Din Pro Light";
         }
+        @include media-breakpoint-down(sm) {
+            margin-bottom: 50%;
+        }
     }
 }
 
 .ak-my-account__addresses, .ak-my-account__edit-account{
-    display: flex;
+    .ak-my-account__address-item:last-child, .col:last-child{
+        border: none;
+    }
+}
 
+.ak-my-account__addresses, .ak-my-account__edit-account{
+
+    display: flex;
+    @include media-breakpoint-down(sm) {
+        display: block;
+    }
+
+    .ak-my-account__address-item:last-child, .col:last-child{
+        padding-left: var(--ak-main-spacing);
+        @include media-breakpoint-down(sm) {
+            padding-left: 0;
+        }
+    }
     .ak-my-account__address-item, .col{
+        padding-top: 43px;
+        padding-bottom: 200px;
         width: 50%;
+        border-right: 1px solid #EAEAEA;
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+            border-right: none;
+            border-bottom: 1px solid #EAEAEA;
+        }
 
         .ak-my-account__address-item-title, .col-title{
             color: #148D9A;
@@ -67,7 +174,10 @@
             width: 60%;
             align-items: baseline;
             justify-content: space-between;
-            
+
+            @include media-breakpoint-down(sm) {
+                width: 100%;
+            }
         }
     }
 
@@ -105,6 +215,9 @@ input, .select2{
     width: 60%!important;  
     color: #148D9A;    
     font-family: 'Din Pro Light';
+    @include media-breakpoint-down(sm) {
+        width: 100%!important;
+    }
     
     &::placeholder{
         color: #148D9A;
@@ -137,3 +250,11 @@ input, .select2{
     }
     
 }
+
+.account-main-title{
+    &.hidden{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
