--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -144,7 +144,7 @@
 
 .site-header {
     position: fixed;
-    top: 0;
+    top: 0px;
     left: 0;
     height: var(--ak-header-height);
     width: 100%;
@@ -156,6 +156,8 @@
     text-transform: uppercase;
     background-color: #ffffff;
     transition: all 350ms ease;
+
+    border-bottom: 1px solid #EAEAEA;
 
     &.hidden {
         transform: translateY(-100%);
@@ -169,17 +171,13 @@
         font-size: 18px;
         font-weight: 300;
         line-height: 1;
+        text-transform: none;
 
         @include media-breakpoint-up(xl) {
             font-size: 18px;
         }
 
-        &.menu-open,
-        &.current-menu-parent:not(.right-col),
-        &.current-menu-item,
-        &.current-menu-ancestor > a {
-            text-decoration: underline;
-        }
+        
     }
 
     .icon-menu-item {
@@ -789,16 +787,14 @@
         top: var(--ak-header-height);
         left: 0;
 
-        border-top: 1px solid #b2b2b2;
-        border-bottom: 1px solid #b2b2b2;
         background-color: #ffffff;
         width: 100%;
-        height: 100px;
+        height: auto;
         padding: 15px var(--ak-main-spacing) 5px;
 
         @include media-breakpoint-up(xl) {
-            height: 150px;
-            padding: 25px var(--ak-main-spacing) 10px;
+            height: auto;
+            padding: 45px var(--ak-main-spacing) 55px;
         }
 
         visibility: hidden;
@@ -841,6 +837,23 @@
             visibility: visible;
             opacity: 1;
             transform: translateY(0);
+        }
+    }
+
+    li.about-item:not(.right-col) > .sub-menu {
+        padding-left: 352px;
+        li{
+            margin-bottom: 50px;
+        }
+    }
+    .about-item.menu-open{
+        .sub-menu{
+            padding-left: 352px;
+            display: inline;
+
+            li:not(:last-child){
+                margin-bottom: 50px;
+            }
         }
     }
 }
@@ -1079,6 +1092,10 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+
+    &.blogs_page{
+        padding-top: 0;
+    }
 }
 
 .top-banner-open {
@@ -3040,31 +3057,23 @@
 .ak-post-item {
     display: block;
     overflow: hidden;
-
-    border-right: 1px solid #b2b2b2;
-    border-bottom: 1px solid #b2b2b2;
+    border-top: 1px solid #EAEAEA;
 
     &__link {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
 
         width: 100%;
         height: 100%;
     }
 
     &__image-container {
-        position: relative;
-
-        height: 0;
-        padding-top: 77.777%;
-
+        min-height: 420px;
         overflow: hidden;
+        width: 36%;
     }
 
     &__image {
-        position: absolute;
-        top: 0;
-        left: 0;
 
         width: 100%;
         height: 100%;
@@ -3074,6 +3083,7 @@
 
     &__description {
         height: 100%;
+        width: 64%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -3089,49 +3099,58 @@
         .title {
             font-family: "Din Pro";
             font-weight: 400;
-            font-size: 32px;
+            font-size: 26px;
+            display: flex;
+            justify-content: space-between;
+            color: #128796;
+            text-transform: none;
 
             @include media-breakpoint-down(sm) {
                 display: flex;
                 flex-direction: column-reverse;
             }
 
-            @include media-breakpoint-up(sm) {
-                font-size: 26px;
-            }
-
-            @include media-breakpoint-up(xl) {
-                font-size: 40px;
+            .title-item{
+                width: 60%
             }
 
             .date-published {
-                color: var(--ak-accent-color);
+                color: #6C6D6E;
 
-                font-family: "Din Pro";
+                font-family: "Din Pro Light";
                 font-weight: 300;
-                font-size: 20px;
+                font-size: 16px;
+
+                text-align: end;
+
+                width: 30%;
 
                 margin-bottom: 20px;
 
-                @include media-breakpoint-up(sm) {
-                    font-size: 16px;
-
-                    margin-bottom: 0;
-                }
-
-                @include media-breakpoint-up(xl) {
-                    font-size: 25px;
-                }
             }
         }
 
-        .read-more-link {
-            text-decoration: underline;
+        p{
+            color: #6C6D6E;
             font-size: 16px;
+            font-family: "Din Pro Light";
 
-            @include media-breakpoint-up(xl) {
-                font-size: 25px;
-            }
+            text-transform: none;
+
+            width: 70%;
+            margin: 40px 0;
+        }
+
+        .read-more-link {
+            font-size: 18px;
+            font-family: "Din Pro Bold";
+            color: #fff;
+
+            background-color: #128796;
+            border-radius: 44px;
+
+            width: fit-content;
+            padding: 15px 29px 11px;     
         }
     }
 }
@@ -3258,15 +3277,8 @@
 
 .blog-page {
     &__blog-items {
-        display: flex;
-        flex-direction: column;
-
-        @include media-breakpoint-up(sm) {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            align-items: stretch;
-            grid-auto-rows: 1fr;
-        }
+        display: block;
+       
     }
 }
 
@@ -5715,4 +5727,70 @@
 
 .ak-page__breadcrumbs-row{
     display: none;
+}
+
+.blog-filter{
+    padding: 43px var(--ak-main-spacing) 0;
+    display: flex;
+    
+
+    .blog-catogories{
+        display: flex;
+        flex-wrap: wrap;
+        width: 50%;
+
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+        }
+    
+        .blog-catogories-item{
+            margin-right: 23px;
+            margin-bottom: 27px;
+            background-color: #88DCDF;
+            border-radius: 22px;
+            color: #128796;
+            padding: 9px 10px 5px;
+
+            @include media-breakpoint-down(sm) {
+                margin-bottom: 32px
+                
+            }
+        }
+
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+
+        }
+    }    
+
+    .blog-sort{
+        width: 50%;
+        text-align: end;
+        margin-top: 10px;
+        @include media-breakpoint-down(sm) {
+            display: flex;
+            flex-direction: column;
+            align-items: end;
+            margin-top: 0px;
+        }
+
+        a:first-child{
+            margin-right: 25px;
+            @include media-breakpoint-down(sm) {
+                margin-right: 0;
+                width: fit-content;
+                margin-bottom: 32px;
+            }
+        }
+        a{
+            background-color: #F89D3F;
+            color: #fff;
+            border-radius: 22px;
+            padding: 10px 10px 7px;
+            text-transform: uppercase;
+            @include media-breakpoint-down(sm) {
+                width: fit-content;
+            }
+        }
+    }
 }
